force-app/main/default/objects/Opportunity/fields/Concurrent__c.field-meta.xml
<CustomField>
    <fullName>Concurrent__c</fullName>
    <label>Concurrent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>