force-app/main/default/objects/Opportunity/fields/LPCR_AnneeImpactBudget__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AnneeImpactBudget__c</fullName>
    <label>Année impact budget</label>
    <type>Date</type>
</CustomField>