force-app/main/default/objects/Opportunity/fields/LPCR_AOSansCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AOSansCreche__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AO sans crèche</label>
    <type>Checkbox</type>
</CustomField>