force-app/main/default/objects/Opportunity/fields/LPCR_ARPU__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ARPU__c</fullName>
    <formula>LPCR_ChiffreAffaires__c  / LPCR_NombrePotentielPlace__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARPU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>