force-app/main/default/objects/Opportunity/fields/LPCR_AutreRaisonPerte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AutreRaisonPerte__c</fullName>
    <label>Raison &quot;Autre&quot; de la perte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>