force-app/main/default/objects/Opportunity/fields/LPCR_CandidatureEnvoyee__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CandidatureEnvoyee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidature envoyée</label>
    <type>Checkbox</type>
</CustomField>