force-app/main/default/objects/Opportunity/fields/LPCR_Collectivite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Collectivite__c</fullName>
    <label>Collectivité</label>
    <length>80</length>
    <type>Text</type>
</CustomField>