force-app/main/default/objects/Opportunity/fields/LPCR_ConcurrentAO__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ConcurrentAO__c</fullName>
    <label>Concurrent</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gestionnaire actuel</fullName>
            </value>
            <value>
                <fullName>Gestionnaire retenu</fullName>
            </value>
            <value>
                <fullName>LPCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>