force-app/main/default/objects/Opportunity/fields/LPCR_ContactCommercial__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactCommercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact du client pour la relation commerciale. Utilisé comme champ de fusion dans les contrats</description>
    <label>Contact Commercial</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>