force-app/main/default/objects/Opportunity/fields/LPCR_ContactInscriptions__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactInscriptions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact du client pour les inscriptions. Utilisé comme champ de fusion dans les contrats</description>
    <label>Contact Inscriptions</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Inscription sur Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>