force-app/main/default/objects/Opportunity/fields/LPCR_ContactPrincipalOpport__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactPrincipalOpport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Principal</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunités (Contact Principal)</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>