force-app/main/default/objects/Opportunity/fields/LPCR_Contract_CheckBox__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Contract_CheckBox__c</fullName>
    <formula>SBQQ__RenewedContract__r.LPCR_AjoutFraisGestion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract CheckBox</label>
    <type>Checkbox</type>
</CustomField>