force-app/main/default/objects/Opportunity/fields/LPCR_DateCandidature__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateCandidature__c</fullName>
    <label>Date de la candidature</label>
    <type>Date</type>
</CustomField>