force-app/main/default/objects/Opportunity/fields/LPCR_DateDebutFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDebutFacturation__c</fullName>
    <label>Date début facturation</label>
    <type>Date</type>
</CustomField>