force-app/main/default/objects/Opportunity/fields/LPCR_DateLimiteQuestion__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateLimiteQuestion__c</fullName>
    <label>Date limite question</label>
    <type>Date</type>
</CustomField>