force-app/main/default/objects/Opportunity/fields/LPCR_DateLimiteRelance__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateLimiteRelance__c</fullName>
    <label>Date limite de relance</label>
    <type>Date</type>
</CustomField>