force-app/main/default/objects/Opportunity/fields/LPCR_DateOffre__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateOffre__c</fullName>
    <label>Date de l&apos;offre</label>
    <type>Date</type>
</CustomField>