force-app/main/default/objects/Opportunity/fields/LPCR_DateVisiteObligatoire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateVisiteObligatoire__c</fullName>
    <label>Date de la visite</label>
    <type>Date</type>
</CustomField>