force-app/main/default/objects/Opportunity/fields/LPCR_Dedie__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Dedie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dédié</label>
    <type>Checkbox</type>
</CustomField>