force-app/main/default/objects/Opportunity/fields/LPCR_Departement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Departement__c</fullName>
    <label>Département</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>