force-app/main/default/objects/Opportunity/fields/LPCR_DispositifExistant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DispositifExistant__c</fullName>
    <label>Dispositif existant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aucun</fullName>
            </value>
            <value>
                <fullName>Travaille avec la concurrence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>