force-app/main/default/objects/Opportunity/fields/LPCR_DureeContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DureeContrat__c</fullName>
    <description>test</description>
    <formula>LPCR_FinContrat__c -  LPCR_DebutContrat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée du contrat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>