force-app/main/default/objects/Opportunity/fields/LPCR_EtapeFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EtapeFamille__c</fullName>
    <label>Etape Famille</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Négociation/ Contractualisation</fullName>
            </value>
            <value>
                <fullName>Signée</fullName>
            </value>
            <value>
                <fullName>Perdue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>