force-app/main/default/objects/Opportunity/fields/LPCR_FinContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FinContrat__c</fullName>
    <label>Fin du contrat</label>
    <type>Date</type>
</CustomField>