force-app/main/default/objects/Opportunity/fields/LPCR_IdExterne_Compte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Compte__c</fullName>
    <label>Id Externe Compte</label>
    <length>50</length>
    <type>Text</type>
</CustomField>