force-app/main/default/objects/Opportunity/fields/LPCR_IdExterne_Creche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Creche__c</fullName>
    <label>Id Externe Crèche</label>
    <length>50</length>
    <type>Text</type>
</CustomField>