force-app/main/default/objects/Opportunity/fields/LPCR_IdExterne_LastmodifiedBy__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_LastmodifiedBy__c</fullName>
    <label>ID Externe LastmodifiedBy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>