force-app/main/default/objects/Opportunity/fields/LPCR_IdExterne_Opportunite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Opportunite__c</fullName>
    <label>ID externe</label>
    <length>180</length>
    <type>Text</type>
</CustomField>