force-app/main/default/objects/Opportunity/fields/LPCR_IndexationConvenueAO__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IndexationConvenueAO__c</fullName>
    <label>Indexation convenue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>