force-app/main/default/objects/Opportunity/fields/LPCR_LeadFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LeadFamille__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead Famille à l&apos;origine de la création d&apos;un lead entreprises qui sera convertit en opportunity</description>
    <label>Lead Famille</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>