force-app/main/default/objects/Opportunity/fields/LPCR_Micro__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Micro__c</fullName>
    <label>Micro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>