force-app/main/default/objects/Opportunity/fields/LPCR_MotifAbandon__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MotifAbandon__c</fullName>
    <label>Motif de l&apos;abandon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>