force-app/main/default/objects/Opportunity/fields/LPCR_MotifPerteAO__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MotifPerteAO__c</fullName>
    <label>Motif de la perte de l&#39;AO</label>
    <length>80</length>
    <type>Text</type>
</CustomField>