force-app/main/default/objects/Opportunity/fields/LPCR_NombrePotentielPlace__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombrePotentielPlace__c</fullName>
    <label>Nombre de places en jeu</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>