force-app/main/default/objects/Opportunity/fields/LPCR_ObjetAO__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ObjetAO__c</fullName>
    <label>Objet de l&apos;AO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>