force-app/main/default/objects/Opportunity/fields/LPCR_Option__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Option__c</fullName>
    <label>Option</label>
    <summaryFilterItems>
        <field>LPCR_LienCrecheOpportunite__c.LPCR_DemandeOption__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>LPCR_LienCrecheOpportunite__c.LPCR_Opportunite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>