force-app/main/default/objects/Opportunity/fields/LPCR_PardotScope__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PardotScope__c</fullName>
    <label>PARDOT_Account_RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>