force-app/main/default/objects/Opportunity/fields/LPCR_Partenaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Partenaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reseau Partenaire</label>
    <type>Checkbox</type>
</CustomField>