force-app/main/default/objects/Opportunity/fields/LPCR_PlaceGagnee__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PlaceGagnee__c</fullName>
    <label>Nombre de places gagnées par LPCR</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>