force-app/main/default/objects/Opportunity/fields/LPCR_PlanningEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PlanningEnfant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LPCR_PlanningEnfant</label>
    <referenceTo>LPCR_Planning__c</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>