force-app/main/default/objects/Opportunity/fields/LPCR_PrixMoyenBerceau__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixMoyenBerceau__c</fullName>
    <label>Prix moyen berceau</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>