force-app/main/default/objects/Opportunity/fields/LPCR_RaisonPerteOpportunite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RaisonPerteOpportunite__c</fullName>
    <label>Raison de la perte d&#39;opportunité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Concurrence</fullName>
            </value>
            <value>
                <fullName>Non disponibilité LPCR</fullName>
            </value>
            <value>
                <fullName>Non disponibilité partenaire</fullName>
            </value>
            <value>
                <fullName>Report du projet</fullName>
            </value>
            <value>
                <fullName>Prix partenaire</fullName>
            </value>
            <value>
                <fullName>Autre mode de garde</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>