force-app/main/default/objects/Opportunity/fields/LPCR_Ref_ContactFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Ref_ContactFacturation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LPCR_Ref_ContactFacturation</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>OppCntFacturation</relationshipName>
    <type>Lookup</type>
</CustomField>