force-app/main/default/objects/Opportunity/fields/LPCR_Ref_ContactInscription__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Ref_ContactInscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LPCR_Ref_ContactInscription</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunités (LPCR_Ref_ContactInscription)</relationshipLabel>
    <relationshipName>OppCntInscription</relationshipName>
    <type>Lookup</type>
</CustomField>