force-app/main/default/objects/Opportunity/fields/LPCR_Ref_IdCompte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Ref_IdCompte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LPCR_Ref_IdCompte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>