force-app/main/default/objects/Opportunity/fields/LPCR_Ref_RespADV__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Ref_RespADV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LPCR_Ref_RespADV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>