force-app/main/default/objects/Opportunity/fields/LPCR_Ref_RespServiceFam__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Ref_RespServiceFam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LPCR_Ref_RespServiceFam</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunit_s1</relationshipName>
    <type>Lookup</type>
</CustomField>