force-app/main/default/objects/Opportunity/fields/LPCR_ReseauLPCR__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ReseauLPCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reseau LPCR</label>
    <type>Checkbox</type>
</CustomField>