force-app/main/default/objects/Opportunity/fields/LPCR_SocieteFacturanteOpport__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SocieteFacturanteOpport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Société Facturante</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>