force-app/main/default/objects/Opportunity/fields/LPCR_TechIdQuote__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TechIdQuote__c</fullName>
    <formula>SBQQ__RenewedContract__r.SBQQ__Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_Id_Quote</label>
    <type>Text</type>
</CustomField>