force-app/main/default/objects/Opportunity/fields/LPCR_TypeAO__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeAO__c</fullName>
    <label>Type d&apos;AO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ouvert</fullName>
            </value>
            <value>
                <fullName>Procédure adaptée</fullName>
            </value>
            <value>
                <fullName>Procédure simplifiée</fullName>
            </value>
            <value>
                <fullName>Restreint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>