force-app/main/default/objects/Opportunity/fields/LPCR_TypeContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeContrat__c</fullName>
    <label>Type de contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afermage</fullName>
            </value>
            <value>
                <fullName>Appel à projet</fullName>
            </value>
            <value>
                <fullName>Concession</fullName>
            </value>
            <value>
                <fullName>Régie intéréssée</fullName>
            </value>
            <value>
                <fullName>MAPA</fullName>
            </value>
            <value>
                <fullName>Marché</fullName>
            </value>
            <value>
                <fullName>Partenariat</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>