force-app/main/default/objects/Opportunity/fields/LPCR_TypeFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeFacturation__c</fullName>
    <label>Type de facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingType</valueSetName>
    </valueSet>
</CustomField>