force-app/main/default/objects/Opportunity/fields/LPCR_TypeMarche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeMarche__c</fullName>
    <label>Type de marché</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;E</fullName>
            </value>
            <value>
                <fullName>C&amp;E</fullName>
            </value>
            <value>
                <fullName>C+E</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>