force-app/main/default/objects/Opportunity/fields/LPCR_TypeOffre__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeOffre__c</fullName>
    <label>Type d&apos;offre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offre dédiée</fullName>
            </value>
            <value>
                <fullName>Offre réseau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>