force-app/main/default/objects/Opportunity/fields/LPCR_ZoneGeo__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ZoneGeo__c</fullName>
    <formula>CASE(Owner.LPCR_RegionCommerciale__c , 
						&quot;Nord-Est&quot;, &quot;Nord-Est&quot;,
						&quot;Rhône-Alpes&quot;, &quot;Rhône-Alpes&quot;,
					 &quot;PACA-LR&quot;, &quot;PACA-LR&quot;,
					 &quot;Grand-Ouest&quot;, &quot;Grand-Ouest&quot;,
					 &quot;IDF-Sud&quot;, &quot;IDF-Sud&quot;,
					 &quot;IDF-Nord&quot;, &quot;IDF-Nord&quot;,
					 &quot;IDF-Sédentaires&quot;, &quot;IDF-Sédentaires&quot;,
					 &quot;Grands-Comptes&quot;, &quot;Grands-Comptes&quot;,
					 &quot;Marchés Publics&quot;, &quot;Marchés Publics&quot;,
					 &quot;Réseau Grandir&quot;, &quot;Réseau Grandir&quot;,
						&quot;Non-défini&quot;
						)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone géographique</label>
    <type>Text</type>
</CustomField>