force-app/main/default/objects/Opportunity/fields/LPCR_ZoneGeographique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ZoneGeographique__c</fullName>
    <label>Zone géographique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDF</fullName>
            </value>
            <value>
                <fullName>Nord Est</fullName>
            </value>
            <value>
                <fullName>Grand Ouest</fullName>
            </value>
            <value>
                <fullName>Rhone Alpes</fullName>
            </value>
            <value>
                <fullName>PACA</fullName>
            </value>
            <value>
                <fullName>LR&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>