force-app/main/default/objects/Opportunity/fields/sbaa__ApprovalStep__c.field-meta.xml
<CustomField>
    <fullName>sbaa__ApprovalStep__c</fullName>
    <description>Used with Native Approvals to indicate the step in the approval process this Opportunity is in</description>
    <inlineHelpText>Utilisée avec des approbateurs natifs pour indiquer l&apos;étape du processus d&apos;approbation dans laquelle se trouve l&apos;opportunité.</inlineHelpText>
    <label>Approval Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>